# BarcodeBERT

./: .flake8  .gitignore  .gitmodules  Bioscan.ipynb  Bioscan_Test.ipynb  CC_requirements.txt  Predict.py  README.md  Untitled.ipynb  bioscan_hugginface.py  bioscan_huggingface.py  dna_barcodes_embedding.ipynb  predict_config.json  pyproject.toml  requirements.txt  test.py  train.py  transformers_utils.py  utils.py
barcodebert/: datasets.py  evaluation.py  finetuning.py  inference.py  io.py  knn_probing.py  linear_probing.py  pretraining.py  utils.py
barcodebert/bzsl/: README.md  run.sh
baselines/: datasets.py  embedders.py  finetuning.py  io.py  knn_probing.py  linear_probing.py
baselines/cnn/: 1D_CNN_Linear_probing.py  1D_CNN_genus.py  1D_CNN_supervised.py
baselines/models/: dnabert2.py  dnabert2_padding.py  hyena_dna.py
data/: data_split.py  unseen.tsv
downstream_task_zsl/: requirements.txt  split_bioscan_1m_data.py
downstream_task_zsl/dna_embeddings/: CNN.py  extract_class_level_dna_feature.py  train_dna_encoder.py
downstream_task_zsl/scripts/: Demo.py  README.md  bayesian_model.py  utils.py
examples/: Barcode_PreTrain.sh  SLURM_Barcode_PreTrain.sh  dna_barcodes_embedding.ipynb  dna_barcodes_pre_training.ipynb  predict_config.json  prediction_test.sh  requirements.txt  run_finetune.py  run_pretrain.py  slurm-32851450.out  test.sh  utils.py
model_checkpoints/: loss.pkl  model_0.pth  model_10.pth  optimizer_0.pth  optimizer_10.pth
scripts/: 1D_CNN_metric.py  1D_CNN_supervised.py  BERT_metric.py  BERT_supervised.py  HF_BERT_metric.py  HF_MLM_train.py  MGPU_MLM_train.py  MLM_train.py  dataset_preprocessing.py  test.py  train.py
scripts/BarcodeBERT/: Fine-tuning.py  Linear_probing.py  MGPU_MLM_train.py  MLM_genus_test.py  Plot_Representations.py  SLURM_pretrain.sh  requirements.txt
scripts/CNN/: 1D_CNN_Linear_probing.py  1D_CNN_genus.py  1D_CNN_supervised.py
scripts/DNABERT/: EvaluationPipeline.sh  FineTuningPipeline.sh  Linear_probing.py  Plot_Representations.py  README.md  bert_extract_dna_feature.py  bert_with_prediction_head.py  (+5 more)
slurm/: notebook.slrm  run.slrm  run_cedar.slrm  train.slrm
util/: dataset.py  model.py
(+31 files in other folders)
