[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "barcodebert"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "repository for training and evaluating BarcodeBERT"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Homepage = "https://github.com/Kari-Genomics-Lab/BarcodeBERT"
Issues = "https://github.com/Kari-Genomics-Lab/BarcodeBERT/issues"
